Bug 98481 - Fix sub-field width to the maximum width of a placeholder and the maximum value
Summary: Fix sub-field width to the maximum width of a placeholder and the maximum value
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kent Tamura
URL:
Keywords:
Depends on:
Blocks: 98226
  Show dependency treegraph
 
Reported: 2012-10-04 22:00 PDT by Kent Tamura
Modified: 2012-10-05 00:35 PDT (History)
1 user (show)

See Also:


Attachments
Patch (202.10 KB, patch)
2012-10-04 22:58 PDT, Kent Tamura
morrita: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kent Tamura 2012-10-04 22:00:43 PDT
Fix sub-field width for the maximum width of a placeholder and the maximum value
Comment 1 Kent Tamura 2012-10-04 22:58:06 PDT
Created attachment 167257 [details]
Patch
Comment 2 Hajime Morrita 2012-10-05 00:25:44 PDT
Comment on attachment 167257 [details]
Patch

OK. It's sad to see another use of customStyleRenderer(). But this is life...
Comment 3 Kent Tamura 2012-10-05 00:35:57 PDT
Committed r130477: <http://trac.webkit.org/changeset/130477>